update of code